--- a/file_test2/.README.md
+++ b/file_test2/.README.md
@@ -1,1 +1,12 @@
-holaaa
+# Perdana Pake StackEdit 
+
+Halo, hari ini di kelas kak bayuzen diajarin buat github dan portofolio untuk *data science*  . Disini juga bisa nge breakdown code apapun itu dengan penjelasannya.
+```python
+def  calculator():
+	nomor1 =  float(input("masukan angka pertama : "))
+	nomor2 =  float(input("masukan angka kedua : "))
+	return nomor1 + nomor2
+```
+disini kita membuat function calculator dimana terdapat 2 variable yang hasilnya akan dijumlahkan. Tipe data yang dihasilkan Float.
+
+Disini juga bisa loh bikin portofolio seperti di **kaggle**, disini buat portofolio GitHub untuk di file README. Ini memudahkan recruiter untuk melihat *step-by-step* portofolio kita. banyak banget kan kegunaanya :) jadi ini link untuk stackedit https://stackedit.io/app#
